--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,6 +8,16 @@
     tools:context=".HomeActivity">
 
     <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/AH_user"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:layout_margin="30dp"
+        />
+
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/AH_title"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -16,6 +26,7 @@
         tools:text="@string/home_title"
         android:textColor="@color/black"
         android:layout_margin="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/AH_user"
         />
 
     <androidx.appcompat.widget.LinearLayoutCompat
